Fix HTML structure by correcting paragraph tags

--- a/xx.html
+++ b/xx.html
@@ -86,7 +86,7 @@
     <section class="instruction">
       <p>Zamknij oczy i posłuchaj.</p>
       <p>Wyobraź sobie, że dźwięk ma kształt.</p>
-      </p>Czy jest okrągły, kanciasty, bardzo długi, malutki jak kropka, a może zupełnie inny?</p>
+      <p>Czy jest okrągły, kanciasty, bardzo długi, malutki jak kropka, a może zupełnie inny?</p>
       <p>Gdy dźwięk się zmienia, czy kształt też się zmienia?</p>
       <p>Narysuj jego zmianę w trzech krokach.</p>
 
