--- a/1.html
+++ b/1.html
@@ -2,50 +2,132 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>karty / galeria tworzę się</title>
+  <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <style>
     :root { color-scheme: light; }
 
     * { box-sizing: border-box; }
 
-    body {
+    html, body {
       margin: 0;
-      padding: 16px;
+      padding: 0;
+      height: 100%;
+    }
+
+    body {
       background: #ffffff;
-      min-height: 100vh;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      color: #111111;
       display: flex;
+      justify-content: center;
       align-items: center;
+    }
+
+    .page {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100vh;
+      width: 100%;
+      max-width: 420px;
+      padding: 16px;
+      box-sizing: border-box;
+    }
+
+    header {
+      flex-shrink: 0;
+    }
+
+    .title {
+      font-size: 14px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      margin: 0 0 4px 0;
+      color: #666666;
+    }
+
+    .track-name {
+      font-size: 18px;
+      font-weight: 500;
+      margin: 0 0 12px 0;
+    }
+
+    .instruction {
+      font-size: 14px;
+      line-height: 1.4;
+      margin: 0 0 12px 0;
+      flex-shrink: 0;
+    }
+
+    .instruction p {
+      margin: 0 0 6px 0;
+    }
+
+    .instruction p:last-child {
+      margin-bottom: 0;
+    }
+
+    .hint {
+      font-size: 13px;
+      color: #888888;
+      margin-top: 10px;
+    }
+
+    .player {
+      flex-grow: 1;
+      display: flex;
+      align-items: flex-end;
       justify-content: center;
     }
 
-    /* prostokątny kadr przycinający dół playera */
     .bc-crop {
       width: 100%;
-      max-width: 360px;   /* szerokość pod mobile */
-      height: 360px;      /* widoczna wysokość – cover + play, bez napisów */
-      overflow: hidden;   /* obcina białą część z napisami pod okładką */
-      margin: 0 auto;
+      height: 100%;
+      max-height: 60vh;
+      max-width: 360px;
+      overflow: hidden;
     }
 
     .bc-player {
       border: 0;
       width: 100%;
-      height: 470px;      /* pełna wysokość embedu Bandcamp */
+      height: 470px; /* wysokość Bandcamp playera */
     }
   </style>
 </head>
 <body>
-  <div class="bc-crop">
-    <iframe
-      class="bc-player"
-      src="https://bandcamp.com/EmbeddedPlayer/track=200305948/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
-      seamless
-    >
-      <a href="https://hajkiewicz.bandcamp.com/album/karty-galeria-tworz-si">
-        karty / galeria tworzę się by Hajkiewicz
-      </a>
-    </iframe>
-  </div>
+  <main class="page">
+    <header>
+      <p class="title">instrukcja odsłuchu</p>
+      <h1 class="track-name">audialne karty uważności / tworzę się</h1>
+    </header>
+
+    <section class="instruction">
+      <p>Zamknij oczy i posłuchaj.</p>
+      <p>Wyobraź sobie, że dźwięk ma kształt.</p>
+      <p>Czy jest okrągły, kanciasty, bardzo długi, malutki jak kropka, a może zupełnie inny?</p>
+      <p>Gdy dźwięk się zmienia, czy kształt też się zmienia?</p>
+      <p>Narysuj jego zmianę w trzech krokach.</p>
+
+      <p class="hint">
+        Przeczytaj instrukcję, a potem dotknij ▶
+      </p>
+    </section>
+
+    <section class="player">
+      <div class="bc-crop">
+        <iframe
+          class="bc-player"
+          src="https://bandcamp.com/EmbeddedPlayer/track=2307967647/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+          seamless
+        >
+          <a href="https://hajkiewicz.bandcamp.com/album/karty-galeria-tworz-si">
+            karty / galeria tworzę się by Hajkiewicz
+          </a>
+        </iframe>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
