--- a/xx.html
+++ b/xx.html
@@ -15,8 +15,8 @@
       height: 100%;
       overflow: hidden;
       font-family: system-ui, sans-serif;
-      color: #111;
       background: #fff;
+      color: #111;
     }
 
     body {
@@ -31,11 +31,12 @@
       max-width: 420px;
       display: flex;
       flex-direction: column;
+      padding: 0 16px;
     }
 
     header, .instruction {
-      padding: 16px;
       flex-shrink: 0;
+      padding-top: 12px;
     }
 
     .title {
@@ -55,6 +56,7 @@
     .instruction {
       font-size: 14px;
       line-height: 1.4;
+      margin-top: 8px;
     }
 
     .instruction p {
@@ -64,29 +66,27 @@
     .hint {
       font-size: 13px;
       color: #888;
-      margin-top: 8px;
+      margin-top: 6px;
     }
 
     .player {
-      flex-grow: 1;
+      margin-top: auto;
+      margin-bottom: 12px;
       display: flex;
-      align-items: flex-end;
       justify-content: center;
-      padding: 0 16px 16px;
     }
 
     .bc-crop {
       width: 100%;
       max-width: 360px;
-      aspect-ratio: 1 / 1; /* zamiast height: 320px */
+      height: 360px; /* wysokość okładki */
       overflow: hidden;
     }
 
     .bc-player {
       border: 0;
       width: 100%;
-      height: 470px; /* Bandcamp player wysokość – musi być większa niż kontener */
-      transform: translateY(-150px); /* dostosuj do przycięcia dolnej części */
+      height: 470px; /* pełna wysokość Bandcamp playera */
     }
   </style>
 </head>
@@ -113,11 +113,11 @@
       <div class="bc-crop">
         <iframe
           class="bc-player"
-          src="https://bandcamp.com/EmbeddedPlayer/track=2307967647/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+          src="https://bandcamp.com/EmbeddedPlayer/track=200305948/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
           seamless
         >
-          <a href="https://hajkiewicz.bandcamp.com/album/karty-galeria-tworz-si">
-            karty / galeria tworzę się by Hajkiewicz
+          <a href="https://hajkiewicz.bandcamp.com/track/tworz-sie">
+            tworzę się by Hajkiewicz
           </a>
         </iframe>
       </div>
@@ -125,5 +125,6 @@
   </main>
 </body>
 </html>
+
 
 
