--- a/xx.html
+++ b/xx.html
@@ -105,7 +105,7 @@
       <p>Narysuj jego zmianę w trzech krokach.</p>
 
       <p class="hint">
-        
+        Przeczytaj instrukcję, a potem dotknij ▶
       </p>
     </section>
 
@@ -125,6 +125,3 @@
   </main>
 </body>
 </html>
-
-
-
