--- a/xx.html
+++ b/xx.html
@@ -2,97 +2,91 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <title>audialne karty</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
   <style>
-    :root { color-scheme: light; }
-
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
 
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
+      overflow: hidden;
+      font-family: system-ui, sans-serif;
+      background: #fff;
+      color: #111;
     }
 
     body {
-      background: #ffffff;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      color: #111111;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
     .page {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
       height: 100vh;
       width: 100%;
       max-width: 420px;
-      padding: 16px;
-      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      padding: 0 16px;
     }
 
-    header {
+    header, .instruction {
       flex-shrink: 0;
+      padding-top: 12px;
     }
 
     .title {
       font-size: 14px;
-      letter-spacing: 0.08em;
       text-transform: uppercase;
+      color: #666;
       margin: 0 0 4px 0;
-      color: #666666;
+      letter-spacing: 0.08em;
     }
 
     .track-name {
       font-size: 18px;
       font-weight: 500;
-      margin: 0 0 12px 0;
+      margin: 0;
     }
 
     .instruction {
       font-size: 14px;
       line-height: 1.4;
-      margin: 0 0 12px 0;
-      flex-shrink: 0;
+      margin-top: 8px;
     }
 
     .instruction p {
       margin: 0 0 6px 0;
     }
 
-    .instruction p:last-child {
-      margin-bottom: 0;
-    }
-
     .hint {
       font-size: 13px;
-      color: #888888;
-      margin-top: 10px;
+      color: #888;
+      margin-top: 6px;
     }
 
     .player {
-      flex-grow: 1;
+      margin-top: auto;
+      margin-bottom: 12px;
       display: flex;
-      align-items: flex-end;
       justify-content: center;
     }
 
     .bc-crop {
       width: 100%;
-      height: 100%;
-      max-height: 60vh;
       max-width: 360px;
+      height: 360px; /* wysokość okładki */
       overflow: hidden;
     }
 
     .bc-player {
       border: 0;
       width: 100%;
-      height: 470px; /* wysokość Bandcamp playera */
+      height: 470px; /* pełna wysokość Bandcamp playera */
     }
   </style>
 </head>
@@ -104,7 +98,7 @@
     </header>
 
     <section class="instruction">
-  
+      <p>Zamknij oczy i posłuchaj.</p>
       <p>Wyobraź sobie, że dźwięk ma kształt.</p>
       <p>Czy jest okrągły, kanciasty, bardzo długi, malutki jak kropka, a może zupełnie inny?</p>
       <p>Gdy dźwięk się zmienia, czy kształt też się zmienia?</p>
@@ -119,11 +113,11 @@
       <div class="bc-crop">
         <iframe
           class="bc-player"
-          src="https://bandcamp.com/EmbeddedPlayer/track=2307967647/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+          src="https://bandcamp.com/EmbeddedPlayer/track=200305948/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
           seamless
         >
-          <a href="https://hajkiewicz.bandcamp.com/album/karty-galeria-tworz-si">
-            karty / galeria tworzę się by Hajkiewicz
+          <a href="https://hajkiewicz.bandcamp.com/track/tworz-sie">
+            tworzę się by Hajkiewicz
           </a>
         </iframe>
       </div>
