--- a/xx.html
+++ b/xx.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>audialne karty</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <style>
     * {
       box-sizing: border-box;
@@ -26,17 +26,18 @@
     }
 
     .page {
-      height: 100vh;
       width: 100%;
       max-width: 420px;
+      padding: 16px;
       display: flex;
       flex-direction: column;
-      padding: 0 16px;
+      justify-content: flex-start;
+      align-items: stretch;
+      height: 100vh;
     }
 
-    header, .instruction {
-      flex-shrink: 0;
-      padding-top: 12px;
+    header {
+      margin-bottom: 8px;
     }
 
     .title {
@@ -57,6 +58,7 @@
       font-size: 14px;
       line-height: 1.4;
       margin-top: 8px;
+      margin-bottom: 16px;
     }
 
     .instruction p {
@@ -71,7 +73,6 @@
 
     .player {
       margin-top: auto;
-      margin-bottom: 12px;
       display: flex;
       justify-content: center;
     }
@@ -79,14 +80,14 @@
     .bc-crop {
       width: 100%;
       max-width: 360px;
+      height: 260px; /* zmniejszona wysokość */
       overflow: hidden;
-      /* Wysokość zostanie ustawiona dynamicznie */
     }
 
     .bc-player {
       border: 0;
       width: 100%;
-      height: 470px; /* pełna wysokość playera Bandcamp */
+      height: 470px; /* wysokość całego playera */
     }
   </style>
 </head>
@@ -98,7 +99,7 @@
     </header>
 
     <section class="instruction">
-      
+      <p>Zamknij oczy i posłuchaj.</p>
       <p>Wyobraź sobie, że dźwięk ma kształt.</p>
       <p>Czy jest okrągły, kanciasty, bardzo długi, malutki jak kropka, a może zupełnie inny?</p>
       <p>Gdy dźwięk się zmienia, czy kształt też się zmienia?</p>
@@ -110,7 +111,7 @@
     </section>
 
     <section class="player">
-      <div class="bc-crop" id="bc-crop">
+      <div class="bc-crop">
         <iframe
           class="bc-player"
           src="https://bandcamp.com/EmbeddedPlayer/track=200305948/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
@@ -123,29 +124,5 @@
       </div>
     </section>
   </main>
-
-  <script>
-    function resizeCrop() {
-      const crop = document.getElementById('bc-crop');
-      const page = document.querySelector('.page');
-
-      const headerHeight = document.querySelector('header').offsetHeight;
-      const instructionHeight = document.querySelector('.instruction').offsetHeight;
-      const bottomPadding = 12;
-
-      const totalUsed = headerHeight + instructionHeight + bottomPadding + 16; // +16 for layout breathing
-      const vh = window.innerHeight;
-
-      const availableHeight = vh - totalUsed;
-
-      crop.style.height = availableHeight + 'px';
-    }
-
-    // Initial call
-    resizeCrop();
-
-    // Recalculate on resize / orientation change
-    window.addEventListener('resize', resizeCrop);
-  </script>
 </body>
 </html>
