--- a/xx.html
+++ b/xx.html
@@ -3,44 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <title>audialne karty</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      overflow: hidden;
       font-family: system-ui, sans-serif;
       background: #fff;
       color: #111;
+
+      /* kluczowe: NIE blokuj przewijania na mobile */
+      overflow: auto;
     }
 
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    body{
+      /* kluczowe: bez flex-centrowania (na iOS często ucina górę) */
+      display: block;
+
+      /* safe-area dla iPhone notch + paski */
+      padding:
+        calc(16px + env(safe-area-inset-top))
+        calc(16px + env(safe-area-inset-right))
+        calc(16px + env(safe-area-inset-bottom))
+        calc(16px + env(safe-area-inset-left));
     }
 
-    .page {
+    .page{
       width: 100%;
       max-width: 420px;
-      padding: 16px;
+
+      /* stabilna wysokość viewportu na iOS */
+      min-height: 100svh;
+
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: stretch;
-      height: 100vh;
     }
 
-    header {
-      margin-bottom: 8px;
-    }
+    header { margin-bottom: 8px; }
 
-    .title {
+    .title{
       font-size: 14px;
       text-transform: uppercase;
       color: #666;
@@ -48,49 +54,64 @@
       letter-spacing: 0.08em;
     }
 
-    .track-name {
+    .track-name{
       font-size: 18px;
       font-weight: 500;
       margin: 0;
     }
 
-    .instruction {
+    .instruction{
       font-size: 14px;
       line-height: 1.4;
       margin-top: 8px;
       margin-bottom: 16px;
     }
 
-    .instruction p {
-      margin: 0 0 6px 0;
-    }
+    .instruction p{ margin: 0 0 6px 0; }
 
-    .hint {
+    .hint{
       font-size: 13px;
       color: #888;
       margin-top: 6px;
     }
 
-    .player {
+    .player{
       margin-top: auto;
       display: flex;
       justify-content: center;
+      padding-bottom: calc(8px + env(safe-area-inset-bottom));
     }
 
-    .bc-crop {
+    /* === Bandcamp: tylko przycisk ▶ ===
+       Robimy "okno" (crop) i przesuwamy iframe w górę,
+       żeby schować dolne elementy (napisy/linki).
+       Uwaga: jeśli Bandcamp zmieni layout, trzeba skorygować wartości.
+    */
+    .bc-crop{
       width: 100%;
       max-width: 360px;
-      height: 260px; /* zmniejszona wysokość */
+
+      /* wysokość tylko na sam pasek z ▶ */
+      height: 70px;
       overflow: hidden;
+      position: relative;
     }
 
-    .bc-player {
+    .bc-player{
       border: 0;
       width: 100%;
-      height: 470px; /* wysokość całego playera */
+
+      /* duże, bo i tak ucinamy */
+      height: 470px;
+
+      /* przesunięcie w górę, żeby zostało tylko ▶ */
+      position: absolute;
+      top: -240px;   /* <- jeśli nadal widać napisy, zwiększ (np. -260px) */
+      left: 0;
     }
   </style>
 </head>
+
 <body>
   <main class="page">
     <header>
@@ -105,9 +126,7 @@
       <p>Gdy dźwięk się zmienia, czy kształt też się zmienia?</p>
       <p>Narysuj jego zmianę w trzech krokach.</p>
 
-      <p class="hint">
-        Przeczytaj instrukcję, a potem dotknij ▶
-      </p>
+      <p class="hint">Przeczytaj instrukcję, a potem dotknij ▶</p>
     </section>
 
     <section class="player">
@@ -116,11 +135,7 @@
           class="bc-player"
           src="https://bandcamp.com/EmbeddedPlayer/track=200305948/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
           seamless
-        >
-          <a href="https://hajkiewicz.bandcamp.com/track/tworz-sie">
-            tworzę się by Hajkiewicz
-          </a>
-        </iframe>
+        ></iframe>
       </div>
     </section>
   </main>
