--- a/1.html
+++ b/1.html
@@ -2,100 +2,93 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <style>
-    :root { color-scheme: light; }
+  <title>audialne karty</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <style>
     * { box-sizing: border-box; }
 
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      font-family: system-ui, sans-serif;
+      background: #fff;
+      color: #111;
+      overflow: auto;
     }
 
-    body {
-      background: #ffffff;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      color: #111111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    body { display: block; }
 
     .page {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 100vh;
       width: 100%;
       max-width: 420px;
+      margin: 0 auto;
       padding: 16px;
-      box-sizing: border-box;
+
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
     }
 
-    header {
-      flex-shrink: 0;
-    }
+    header { margin-bottom: 8px; }
 
     .title {
       font-size: 14px;
-      letter-spacing: 0.08em;
       text-transform: uppercase;
+      color: #666;
       margin: 0 0 4px 0;
-      color: #666666;
+      letter-spacing: 0.08em;
     }
 
     .track-name {
       font-size: 18px;
       font-weight: 500;
-      margin: 0 0 12px 0;
+      margin: 0;
     }
 
     .instruction {
       font-size: 14px;
       line-height: 1.4;
-      margin: 0 0 12px 0;
-      flex-shrink: 0;
+      margin-top: 8px;
+      margin-bottom: 16px;
     }
 
-    .instruction p {
-      margin: 0 0 6px 0;
-    }
-
-    .instruction p:last-child {
-      margin-bottom: 0;
-    }
+    .instruction p { margin: 0 0 6px 0; }
 
     .hint {
       font-size: 13px;
-      color: #888888;
-      margin-top: 10px;
+      color: #888;
+      margin-top: 6px;
     }
 
     .player {
-      flex-grow: 1;
       display: flex;
-      align-items: flex-end;
       justify-content: center;
     }
 
+    /* === Bandcamp: skalowanie + ucięcie dołu === */
     .bc-crop {
       width: 100%;
-      height: 100%;
-      max-height: 60vh;
       max-width: 360px;
+      height: 330px;
       overflow: hidden;
+    }
+
+    .bc-scale {
+      width: 100%;
+      transform: scale(0.92);
+      transform-origin: top center;
     }
 
     .bc-player {
       border: 0;
       width: 100%;
-      height: 470px; /* wysokość Bandcamp playera */
+      height: 470px;
+      display: block;
     }
   </style>
 </head>
+
 <body>
   <main class="page">
     <header>
@@ -104,28 +97,27 @@
     </header>
 
     <section class="instruction">
-      <p>Zamknij oczy i posłuchaj.</p>
-      <p>Wyobraź sobie, że dźwięk ma kształt.</p>
-      <p>Czy jest okrągły, kanciasty, bardzo długi, malutki jak kropka, a może zupełnie inny?</p>
-      <p>Gdy dźwięk się zmienia, czy kształt też się zmienia?</p>
-      <p>Narysuj jego zmianę w trzech krokach.</p>
+      <p>Połóż rękę na brzuchu i zwróć uwagę na tempo swojego oddechu.</p>
+      <p>Włącz nagranie i zamknij oczy, wsłuchaj się w dźwięk i sprawdź, czy przypomina oddech.</p>
+      <p>Czy ma wdechy i wydechy?</p>
+      <p>Czy dźwięk oddycha szybko, czy wolno?</p>
+      <p>Zauważ kiedy dźwięk unosi się, a kiedy opada.</p>
+      <p>Zacznij oddychać w tym samym tempie, w którym porusza się dźwięk.</p>
+      <p>Utrzymuj oddech w rytmie nagrania.</p>
 
-      <p class="hint">
-        Przeczytaj instrukcję, a potem dotknij ▶
-      </p>
+      <p class="hint">Przeczytaj instrukcję, a potem dotknij ▶</p>
     </section>
 
     <section class="player">
       <div class="bc-crop">
-        <iframe
-          class="bc-player"
-          src="https://bandcamp.com/EmbeddedPlayer/track=2307967647/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
-          seamless
-        >
-          <a href="https://hajkiewicz.bandcamp.com/album/karty-galeria-tworz-si">
-            karty / galeria tworzę się by Hajkiewicz
-          </a>
-        </iframe>
+        <div class="bc-scale">
+          <iframe
+            class="bc-player"
+            src="https://bandcamp.com/EmbeddedPlayer/track=200305948/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+            seamless
+            scrolling="no"
+          ></iframe>
+        </div>
       </div>
     </section>
   </main>
