Update breathing instructions in 1.html
Removed and modified several instructions for clarity.

--- a/1.html
+++ b/1.html
@@ -97,13 +97,10 @@
     </header>
 
     <section class="instruction">
-      <p>Połóż rękę na brzuchu i zwróć uwagę na tempo swojego oddechu.</p>
-      <p>Włącz nagranie i zamknij oczy, wsłuchaj się w dźwięk i sprawdź, czy przypomina oddech.</p>
+      <p>Włącz nagranie i wsłuchaj się w dźwięk.</p>
+      <p>Zwróć uwagę na to, jak się rusza.</p>
       <p>Czy ma wdechy i wydechy?</p>
-      <p>Czy dźwięk oddycha szybko, czy wolno?</p>
-      <p>Zauważ kiedy dźwięk unosi się, a kiedy opada.</p>
-      <p>Zacznij oddychać w tym samym tempie, w którym porusza się dźwięk.</p>
-      <p>Utrzymuj oddech w rytmie nagrania.</p>
+      <p>Sprawdź, czy przypomina Twój oddech.</p>
 
       <p class="hint">Przeczytaj instrukcję, a potem dotknij ▶</p>
     </section>
