--- a/1.html
+++ b/1.html
@@ -93,7 +93,7 @@
   <main class="page">
     <header>
       <p class="title">instrukcja odsłuchu</p>
-      <h1 class="track-name">audialne karty uważności / tworzę się</h1>
+      <h1 class="track-name"></h1>
     </header>
 
     <section class="instruction">
