Increase font size and update instruction text

--- a/2.html
+++ b/2.html
@@ -33,7 +33,7 @@
     header { margin-bottom: 8px; }
 
     .title {
-      font-size: 14px;
+      font-size: 16px;
       text-transform: uppercase;
       color: #666;
       margin: 0 0 4px 0;
@@ -47,7 +47,7 @@
     }
 
     .instruction {
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1.4;
       margin-top: 8px;
       margin-bottom: 16px;
@@ -97,12 +97,8 @@
     </header>
 
     <section class="instruction">
-      <p>Posłuchaj nagrania od początku do końca z zamkniętymi oczami.</p>
-      <p>Określ, w jaki sposób dźwięk się pojawia.</p>
-      <p>Jakie wyraźne zmiany zachodzą w trakcie nagrania?</p>
-      <p>Określ, w jaki sposób dźwięk się kończy.</p>
-      <p>Pomyśl, jaką opowieść tworzy ten dźwięk.</p>
-      <p>Spróbuj podzielić tę opowieść na części.</p>
+      <p>Jaką opowieść tworzy ten dźwięk? Co mogłoby się w niej wydarzyć?</p>
+      <p>Czy możesz podzielić tę opowieść na części?</p>
 
       <p class="hint">Przeczytaj instrukcję, a potem dotknij ▶</p>
     </section>
