Split a paragraph into two separate sentences

--- a/2.html
+++ b/2.html
@@ -97,7 +97,8 @@
     </header>
 
     <section class="instruction">
-      <p>Jaką opowieść tworzy ten dźwięk? Co mogłoby się w niej wydarzyć?</p>
+      <p>Jaką opowieść tworzy ten dźwięk?</p>
+       <p>Co mogłoby się w niej wydarzyć?</p>
       <p>Czy możesz podzielić tę opowieść na części?</p>
 
       <p class="hint">Przeczytaj instrukcję, a potem dotknij ▶</p>
