Remove track name from header in 2.html

--- a/2.html
+++ b/2.html
@@ -92,8 +92,9 @@
 <body>
   <main class="page">
     <header>
+
       <p class="title">instrukcja odsłuchu</p>
-      <h1 class="track-name">audialne karty uważności / tworzę się</h1>
+      <h1 class="track-name"></h1>
     </header>
 
     <section class="instruction">
