Increase font size and update instructions in 6.html

--- a/6.html
+++ b/6.html
@@ -33,7 +33,7 @@
     header { margin-bottom: 8px; }
 
     .title {
-      font-size: 14px;
+      font-size: 16px;
       text-transform: uppercase;
       color: #666;
       margin: 0 0 4px 0;
@@ -47,7 +47,7 @@
     }
 
     .instruction {
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1.4;
       margin-top: 8px;
       margin-bottom: 16px;
@@ -93,16 +93,16 @@
   <main class="page">
     <header>
       <p class="title">instrukcja odsłuchu</p>
-      <h1 class="track-name">audialne karty uważności / tworzę się</h1>
+      <h1 class="track-name"></h1>
     </header>
 
     <section class="instruction">
-      <p>Włącz dźwięk i zamknij oczy.</p>
-      <p>Zwróć uwagę na to, co słyszysz jako pierwsze: co jest na wierzchu, jakie dźwięki są najbardziej wyraźne i najgłośniejsze.</p>
-      <p>Następnie wsłuchaj się w dźwięki, które pojawiają się głębiej, pod spodem. Posłuchaj dźwięków mniej wyraźnych lub pojawiających się sporadycznie.</p>
-      <p>Sprawdź, czy w nagraniu można usłyszeć elementy bardzo delikatne, łatwe do pominięcia: dźwięki ukryte.</p>
-      <p>Wyobraź sobie, że nagranie składa się z warstw, tak jak tort przekładany różnymi składnikami.</p>
-      <p>Wymień te warstwy po kolei, od najbardziej wyrazistej do najbardziej subtelnej.</p>
+      <p>Dźwięk składa się z warstw, tak jak kawałek tortu przekładany różnymi składnikami.</p>
+      <p>Zwróć uwagę na to, co słychać na wierzchu.</p>
+      <p>Wsłuchaj się w dźwięki, które pojawiają się pod spodem, dźwięki mniej wyraźne.</p>
+      <p>Sprawdź, czy w nagraniu można usłyszeć elementy bardzo delikatne, dźwięki ukryte.</p>
+      <p>Czy jest jakaś warstwa, która pojawia się i znika?</p>
+      <p>Jakie warstwy tu słyszysz?</p>
 
       <p class="hint">Przeczytaj instrukcję, a potem dotknij ▶</p>
     </section>
