--- a/7.html
+++ b/7.html
@@ -33,7 +33,7 @@
     header { margin-bottom: 8px; }
 
     .title {
-      font-size: 14px;
+      font-size: 16px;
       text-transform: uppercase;
       color: #666;
       margin: 0 0 4px 0;
@@ -47,7 +47,7 @@
     }
 
     .instruction {
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1.4;
       margin-top: 8px;
       margin-bottom: 16px;
@@ -96,11 +96,11 @@
   <main class="page">
     <header>
       <p class="title">instrukcja odsłuchu</p>
-      <h1 class="track-name">audialne karty uważności / tworzę się</h1>
+      <h1 class="track-name"></h1>
     </header>
 
     <section class="instruction">
-      <p>Zamknij oczy i posłuchaj.</p>
+      <p></p>
       <p>Wyobraź sobie, że dźwięk ma kształt.</p>
       <p>Czy jest okrągły, kanciasty, bardzo długi, malutki jak kropka, a może zupełnie inny?</p>
       <p>Gdy dźwięk się zmienia, czy kształt też się zmienia?</p>
