--- a/7.html
+++ b/7.html
@@ -104,7 +104,7 @@
       <p>Wyobraź sobie, że dźwięk ma kształt.</p>
       <p>Czy jest okrągły, kanciasty, bardzo długi, malutki jak kropka, a może zupełnie inny?</p>
       <p>Gdy dźwięk się zmienia, czy kształt też się zmienia?</p>
-      <p>Narysuj jego zmianę w trzech krokach.</p>
+      <p>Narysuj ten dźwięk.</p>
       <p class="hint">Przeczytaj instrukcję, a potem dotknij ▶</p>
     </section>
 
