--- a/3.html
+++ b/3.html
@@ -33,7 +33,7 @@
     header { margin-bottom: 8px; }
 
     .title {
-      font-size: 14px;
+      font-size: 16px;
       text-transform: uppercase;
       color: #666;
       margin: 0 0 4px 0;
@@ -47,7 +47,7 @@
     }
 
     .instruction {
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1.4;
       margin-top: 8px;
       margin-bottom: 16px;
@@ -93,14 +93,14 @@
   <main class="page">
     <header>
       <p class="title">instrukcja odsłuchu</p>
-      <h1 class="track-name">audialne karty uważności / tworzę się</h1>
+      <h1 class="track-name"></h1>
     </header>
 
     <section class="instruction">
+      <p>Wybierz słowa, które najlepiej oddają to, co słyszysz.</p>
+      <p>Wyobraź sobie, że znajdujesz się wewnątrz tego dźwięku.</p>
+      <p>Jaka jest tam atmosfera?</p>
       <p>Włącz nagranie i zamknij oczy.</p>
-      <p>Wyobraź sobie, że znajdujesz się wewnątrz dźwięku, który słyszysz.</p>
-      <p>Określ, jaka panuje tam atmosfera: czy dźwięk jest gęsty, przejrzysty, spokojny, chaotyczny, a może zupełnie inny?</p>
-      <p>Wybierz jedną lub kilka jakości dźwięku, które najlepiej oddają Twoje odczucie. Opisz te jakości w kilku zdaniach.</p>
 
       <p class="hint">Przeczytaj instrukcję, a potem dotknij ▶</p>
     </section>
